@@ -41,6 +41,7 @@ import org.jetbrains.annotations.Nullable;
 import java.util.Arrays;
 import java.util.Map;
 
+// Entries are keyed per table token and hold a fixed array of allocation slots.
 public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends AbstractPool implements ResourcePool<T> {
     public final static String LOCKED = "pool is locked";
     public final static String NO_LOCK_REASON = "unknown";
@@ -56,22 +57,12 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
     private final int maxEntries;
     private final int maxSegments;
     private final int segmentSize;
-    private final ThreadLocal<ResourcePoolSupervisor<T>> threadLocalPoolSupervisor;
 
     public AbstractMultiTenantPool(CairoConfiguration configuration, int maxSegments, long inactiveTtlMillis) {
         super(configuration, inactiveTtlMillis);
         this.maxSegments = maxSegments;
         this.segmentSize = configuration.getPoolSegmentSize();
         this.maxEntries = maxSegments * configuration.getPoolSegmentSize();
-        if (configuration.cairoResourcePoolTracingEnabled()) {
-            threadLocalPoolSupervisor = new io.questdb.std.ThreadLocal<>(TracingResourcePoolSupervisor::new);
-        } else {
-            threadLocalPoolSupervisor = new ThreadLocal<>();
-        }
-    }
-
-    public void configureThreadLocalPoolSupervisor(@NotNull ResourcePoolSupervisor<T> poolSupervisor) {
-        this.threadLocalPoolSupervisor.set(poolSupervisor);
     }
 
     public Map<CharSequence, Entry<T>> entries() {
@@ -80,7 +71,11 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
 
     @Override
     public T get(TableToken tableToken) {
-        return get0(tableToken, null);
+        return get0(tableToken, null, null);
+    }
+
+    protected T getWithSupervisor(TableToken tableToken, @Nullable ResourcePoolSupervisor<T> supervisor) {
+        return get0(tableToken, null, supervisor);
     }
 
     public int getBusyCount() {
@@ -113,7 +108,7 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
 
     public boolean lock(TableToken tableToken) {
         Entry<T> e = getEntry(tableToken);
-        final long thread = Thread.currentThread().getId();
+        final long thread = Thread.currentThread().threadId();
         if (Unsafe.cas(e, LOCK_OWNER, UNLOCKED, thread) || e.lockOwner == thread) {
             do {
                 for (int i = 0; i < segmentSize; i++) {
@@ -139,7 +134,7 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
 
                 // try to prevent new entries from being created
                 if (e.next == null) {
-                    if (Unsafe.getUnsafe().compareAndSwapInt(e, NEXT_STATUS, NEXT_OPEN, NEXT_LOCKED)) {
+                    if (Unsafe.cas(e, NEXT_STATUS, NEXT_OPEN, NEXT_LOCKED)) {
                         break;
                     } else if (e.nextStatus == NEXT_ALLOCATED) {
                         // now we must wait until another thread that executes a get() call
@@ -168,7 +163,7 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
 
     public void notifyDropped(TableToken token, boolean fullDropped) {
         Entry<T> firstEntry = entries.get(token.getDirName());
-        long thread = Thread.currentThread().getId();
+        long thread = Thread.currentThread().threadId();
 
         if (firstEntry != null) {
             // Mark the entry as dropped. Any attempt to return to pool after this point
@@ -206,17 +201,13 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
         }
     }
 
-    public void removeThreadLocalPoolSupervisor() {
-        this.threadLocalPoolSupervisor.remove();
-    }
-
     public void unlock(TableToken tableToken) {
         unlock(tableToken, false);
     }
 
     public void unlock(TableToken tableToken, boolean quiet) {
         Entry<T> e = entries.get(tableToken.getDirName());
-        long thread = Thread.currentThread().getId();
+        long thread = Thread.currentThread().threadId();
         if (e == null) {
             if (!quiet) {
                 // This is OK, the table deletion holds lock and deletes the entry
@@ -261,12 +252,12 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
         }
     }
 
-    private T get0(TableToken tableToken, @Nullable T copyOfTenant) {
+    private T get0(TableToken tableToken, @Nullable T copyOfTenant, @Nullable ResourcePoolSupervisor<T> poolSupervisor) {
         Entry<T> rootEntry = getEntry(tableToken);
         Entry<T> e = rootEntry;
 
         long lockOwner = e.lockOwner;
-        long thread = Thread.currentThread().getId();
+        long thread = Thread.currentThread().threadId();
 
         if (lockOwner != UNLOCKED) {
             LOG.info().$("table is locked [table=").$(tableToken)
@@ -291,7 +282,16 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
                     Unsafe.arrayPutOrdered(e.releaseOrAcquireTimes, i, clock.getTicks());
                     // got lock, allocate if needed
                     T tenant = e.getTenant(i);
-                    ResourcePoolSupervisor<T> supervisor = threadLocalPoolSupervisor.get();
+                    // The query-scoped supervisor is supplied by the borrowing caller; it lives
+                    // on SqlExecutionContext (passed in via CairoEngine.getReader) so it travels
+                    // with a continuation that parks and resumes on a different worker. When none
+                    // is supplied and resource pool tracing is enabled, fall back to a per-borrow
+                    // tracing supervisor so the debug "left behind" attribution keeps working for
+                    // every pool, including non-SQL borrows that have no execution context.
+                    ResourcePoolSupervisor<T> supervisor = poolSupervisor;
+                    if (supervisor == null && getConfiguration().cairoResourcePoolTracingEnabled()) {
+                        supervisor = new TracingResourcePoolSupervisor<>();
+                    }
                     if (tenant == null) {
                         try {
                             LOG.debug()
@@ -352,7 +352,7 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
             LOG.debug().$("Thread ").$(thread).$(" is moving to entry ").$(e.index + 1).$();
 
             // all allocated, create next entry if possible
-            if (Unsafe.getUnsafe().compareAndSwapInt(e, NEXT_STATUS, NEXT_OPEN, NEXT_ALLOCATED)) {
+            if (Unsafe.cas(e, NEXT_STATUS, NEXT_OPEN, NEXT_ALLOCATED)) {
                 LOG.debug().$("Thread ").$(thread).$(" allocated entry ").$(e.index + 1).$();
                 e.next = new Entry<>(e.index + 1, clock.getTicks(), segmentSize);
             } else {
@@ -393,6 +393,18 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
         return e;
     }
 
+    private boolean isEntryEmpty(Entry<T> e) {
+        do {
+            for (int i = 0; i < segmentSize; i++) {
+                if (Unsafe.arrayGetVolatile(e.allocations, i) != UNALLOCATED || e.getTenant(i) != null) {
+                    return false;
+                }
+            }
+            e = e.next;
+        } while (e != null);
+        return true;
+    }
+
     private void notifyListener(long thread, TableToken token, short event, int segment, int position) {
         PoolListener listener = getPoolListener();
         if (listener != null) {
@@ -413,7 +425,7 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
         }
 
         final TableToken tableToken = tenant.getTableToken();
-        final long thread = Thread.currentThread().getId();
+        final long thread = Thread.currentThread().threadId();
         final int index = tenant.getIndex();
         final long owner = Unsafe.arrayGetVolatile(e.allocations, index);
 
@@ -428,11 +440,11 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
         }
     }
 
-    protected T getCopyOf(@NotNull T srcTenant) {
+    protected T getCopyOf(@NotNull T srcTenant, @Nullable ResourcePoolSupervisor<T> supervisor) {
         if (!isCopyOfSupported()) {
             throw new UnsupportedOperationException("getCopyOf is not supported by this pool");
         }
-        return get0(srcTenant.getTableToken(), srcTenant);
+        return get0(srcTenant.getTableToken(), srcTenant, supervisor);
     }
 
     protected abstract byte getListenerSrc();
@@ -457,7 +469,7 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
 
     @Override
     protected boolean releaseAll(long deadline) {
-        long thread = Thread.currentThread().getId();
+        long thread = Thread.currentThread().threadId();
         boolean removed = false;
         int casFailures = 0;
         int closeReason = deadline < Long.MAX_VALUE ? PoolConstants.CR_IDLE : PoolConstants.CR_POOL_CLOSE;
@@ -506,6 +518,22 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
                     .put("table is left behind on pool shutdown [table=").put(leftBehind).put(']');
         }
 
+        // On a full release (pool close / @TestOnly engine.clear()) every tenant above is now closed,
+        // so also drop the now-empty per-dir-name entries. Otherwise a dropped or ALTER TABLE ... REBASE
+        // WAL'd table leaves its entry behind flagged dropped -- cleared only once WalPurgeJob fully
+        // deletes the dir and calls removeTableToken -- and a later reuse of the same dir name (tests
+        // reset the table-id generator and recreate e.g. base_price~1) inherits that stale flag and
+        // disposes every writer on return. Gated to Long.MAX_VALUE: releaseInactive() runs concurrently
+        // with get() in production, where removing an entry out from under a live borrow is unsafe.
+        if (deadline == Long.MAX_VALUE) {
+            for (Map.Entry<CharSequence, Entry<T>> me : entries.entrySet()) {
+                final Entry<T> e = me.getValue();
+                if (isEntryEmpty(e)) {
+                    entries.remove(me.getKey(), e);
+                }
+            }
+        }
+
         // when we are timing out entries the result is "true" if there was any work done
         // when we're closing pool, the result is true when pool is empty
         if (closeReason == PoolConstants.CR_IDLE) {
@@ -522,7 +550,7 @@ public abstract class AbstractMultiTenantPool<T extends PoolTenant<T>> extends A
         }
 
         final TableToken tableToken = tenant.getTableToken();
-        final long thread = Thread.currentThread().getId();
+        final long thread = Thread.currentThread().threadId();
         final int index = tenant.getIndex();
         final long owner = Unsafe.arrayGetVolatile(e.allocations, index);
 
